syntax = "proto3";

service LikeService {
  rpc RecordLike(Args) returns (Like);
}

message Args {
  int32 PostID = 3;
  int32 UserID = 4;
}

message Like {
  int32 PostID = 1;
  int32 Count = 2;
}
