package service.user_service.user;

message AuthRequest {
  optional string requestID = 1;
  optional string callerID = 2;
  optional string authToken = 3;
}

message AuthResponse {
  optional string requestID = 1;
  optional bool valid = 2;
  optional User user = 3;
}

message User {
  optional int32 id = 1;
  optional string firstName = 2;
  optional string lastName = 3;
  optional string email = 4;
  optional string authToken = 5;
}
